fixed gaps

--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,3 +1,7 @@
+.about-me h2 {
+    margin-top:1rem;
+}
+
 .about-me p {
     text-align: left;
     font-size:1rem;
