--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,6 +4,7 @@ footer {
     align-items: center;
     border-top: 2px solid rgba(66, 68, 110, 0.3);
     padding:1rem 0;
+    margin-top:-1rem;
 }
 
 footer p {
